--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -184,92 +184,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_et"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_et"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_et"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_et"
 
 msgid "European Commission website"
 msgstr "Euroopa Komisjoni veebisait"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_et"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_et"
 
 msgid "Strategy"
 msgstr "Strateegia"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_et"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_et"
 
 msgid "About the European Commission"
 msgstr "Euroopa Komisjoni tutvustus"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_et"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_et"
 
 msgid "Business, Economy, Euro"
 msgstr "Ettevõtlus, majandus, euro"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_et"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_et"
 
 msgid "Live, work, travel in the EU"
 msgstr "Elamine, töötamine ja reisimine ELis"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_et"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_et"
 
 msgid "Law"
 msgstr "Õigusnormid"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_et"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_et"
 
 msgid "Funding, Tenders"
 msgstr "Rahastamine, hanked"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_et"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_et"
 
 msgid "Research and innovation"
 msgstr "Teadusuuringud ja innovatsioon"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_et"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_et"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energia, kliimamuutused, keskkond"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_et"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_et"
 
 msgid "Education"
 msgstr "Haridus"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_et"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_et"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Abi, arengukoostöö, põhiõigused"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_et"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_et"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Toit, põllumajandus, kalandus"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_et"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_et"
 
 msgid "EU regional and urban development"
 msgstr "ELi regionaal- ja linnapoliitika"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_et"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_et"
 
 msgid "Jobs at the European Commission"
 msgstr "Töökohad Euroopa Komisjonis"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_et"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_et"
 
 msgid "Statistics"
 msgstr "Statistika"
@@ -280,20 +280,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/et"
 msgid "News"
 msgstr "Uudised"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_et"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_et"
 
 msgid "Events"
 msgstr "Üritused"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_et"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_et"
 
 msgid "Publications"
 msgstr "Väljaanded"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_et"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_et"
 
 msgid "Contact the European Commission"
 msgstr "Võtke ühendust Euroopa Komisjoniga"
@@ -304,23 +304,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_et#/se
 msgid "Follow the European Commission on social media"
 msgstr "Euroopa Komisjon sotsiaalmeedias"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_et"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_et"
 
 msgid "Resources for partners"
 msgstr "Materjalid partneritele"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_et"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_et"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_et"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_et"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_et"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_et"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_et"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_et"
 
 msgid "Social media"
 msgstr "Sotsiaalmeedia"
