--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -181,92 +181,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_sk"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_sk"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_sk"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_sk"
 
 msgid "European Commission website"
 msgstr "Internetové stránky Európskej komisie"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_sk"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_sk"
 
 msgid "Strategy"
 msgstr "Stratégia"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_sk"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_sk"
 
 msgid "About the European Commission"
 msgstr "O Európskej komisii"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_sk"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_sk"
 
 msgid "Business, Economy, Euro"
 msgstr "Podnikanie, hospodárstvo, euro"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_sk"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_sk"
 
 msgid "Live, work, travel in the EU"
 msgstr "Život, práca a cestovanie v EÚ"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_sk"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_sk"
 
 msgid "Law"
 msgstr "Právo"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_sk"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_sk"
 
 msgid "Funding, Tenders"
 msgstr "Financovanie, verejné súťaže"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_sk"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_sk"
 
 msgid "Research and innovation"
 msgstr "Výskum a inovácie"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_sk"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_sk"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energetika, zmena klímy, životné prostredie"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_sk"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_sk"
 
 msgid "Education"
 msgstr "Vzdelávanie"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_sk"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_sk"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Pomoc, rozvojová spolupráca, základné práva"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_sk"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_sk"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Potraviny, poľnohospodárstvo, rybárstvo"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_sk"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_sk"
 
 msgid "EU regional and urban development"
 msgstr "Investície EÚ do regiónov a miest"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_sk"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_sk"
 
 msgid "Jobs at the European Commission"
 msgstr "Pracovné miesta v Európskej komisii"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_sk"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_sk"
 
 msgid "Statistics"
 msgstr "Štatistiky"
@@ -277,20 +277,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/sk"
 msgid "News"
 msgstr "Aktuality"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_sk"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_sk"
 
 msgid "Events"
 msgstr "Podujatia"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_sk"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_sk"
 
 msgid "Publications"
 msgstr "Publikácie"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_sk"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_sk"
 
 msgid "Contact the European Commission"
 msgstr "Kontakty na Európsku komisiu"
@@ -301,23 +301,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_sk#/se
 msgid "Follow the European Commission on social media"
 msgstr "Sledujte Európsku komisiu na sociálnych médiách"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_sk"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_sk"
 
 msgid "Resources for partners"
 msgstr "Materiály pre partnerov"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_sk"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_sk"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_sk"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_sk"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_sk"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_sk"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_sk"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_sk"
 
 msgid "Social media"
 msgstr "Sociálne médiá"
