--- a/translations/oe_corporate_blocks-bg.po
+++ b/translations/oe_corporate_blocks-bg.po
@@ -62,7 +62,7 @@ msgid "European Commission"
 msgstr "Европейска комисия"
 
 msgid "https://ec.europa.eu/commission/index_en"
-msgstr "https://ec.europa.eu/info/index_en"
+msgstr "https://commission.europa.eu/index_en"
 
 msgid "Court of Justice of the European Union (CJEU)"
 msgstr "Съд на Европейския съюз"
@@ -187,96 +187,96 @@ msgstr "https://european-union.europa.eu/accessibility-statement_bg"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_bg"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_bg"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_bg"
 
 msgid "European Commission website"
 msgstr "Уебсайт на Европейската комисия"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_bg"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_bg"
 
 msgid "Strategy"
 msgstr "Стратегия"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_bg"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_bg"
 
 msgid "About the European Commission"
 msgstr "За Европейската комисия"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_bg"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_bg"
 
 msgid "Business, Economy, Euro"
 msgstr "Бизнес, икономика, евро"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_bg"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_bg"
 
 msgid "Live, work, travel in the EU"
 msgstr "Живот, работа, пътуване в ЕС"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_bg"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_bg"
 
 msgid "Law"
 msgstr "Законодателство"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_bg"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_bg"
 
 msgid "Funding, Tenders"
 msgstr "Финансиране, обществени поръчки"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_bg"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_bg"
 
 msgid "Research and innovation"
 msgstr "Научни изследвания и иновации"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_bg"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_bg"
 
 msgid "Energy, Climate change, Environment"
 msgstr ""
 "Енергетика, изменение на климата, "
 "околна среда"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_bg"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_bg"
 
 msgid "Education"
 msgstr "Образование"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_bg"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_bg"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr ""
 "Помощи, сътрудничество за развитие, "
 "основни права"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_bg"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_bg"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Храни, земеделие, рибарство"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_bg"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_bg"
 
 msgid "EU regional and urban development"
 msgstr "Регионална и селищна политика на ЕС"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_bg"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_bg"
 
 msgid "Jobs at the European Commission"
 msgstr "Работни места в Европейската комисия"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_bg"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_bg"
 
 msgid "Statistics"
 msgstr "Статистики"
@@ -287,20 +287,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/bg"
 msgid "News"
 msgstr "Новини"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_bg"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_bg"
 
 msgid "Events"
 msgstr "Прояви"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_bg"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_bg"
 
 msgid "Publications"
 msgstr "Публикации"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_bg"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_bg"
 
 msgid "Contact the European Commission"
 msgstr "За контакти с Европейската комисия"
@@ -313,23 +313,23 @@ msgstr ""
 "Следвайте Европейската комисия в "
 "социалните медии"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_bg"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_bg"
 
 msgid "Resources for partners"
 msgstr "Ресурси за партньори"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_bg"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_bg"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_bg"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_bg"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_bg"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_bg"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_bg"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_bg"
 
 msgid "Social media"
 msgstr "Социални медии"
