--- a/translations/oe_corporate_blocks-cs.po
+++ b/translations/oe_corporate_blocks-cs.po
@@ -62,7 +62,7 @@ msgid "European Commission"
 msgstr "Evropská komise"
 
 msgid "https://ec.europa.eu/commission/index_en"
-msgstr "https://ec.europa.eu/info/index_cs"
+msgstr "https://commission.europa.eu/index_cs"
 
 msgid "Court of Justice of the European Union (CJEU)"
 msgstr "Soudní dvůr Evropské unie"
@@ -178,92 +178,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_cs"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_cs"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_cs"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_cs"
 
 msgid "European Commission website"
 msgstr "Internetové stránky Evropské komise"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_cs"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_cs"
 
 msgid "Strategy"
 msgstr "Politická strategie EU"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_cs"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_cs"
 
 msgid "About the European Commission"
 msgstr "O Evropské komisi"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_cs"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_cs"
 
 msgid "Business, Economy, Euro"
 msgstr "Podnikání, ekonomika, euro"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_cs"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_cs"
 
 msgid "Live, work, travel in the EU"
 msgstr "Pobyt, práce a cestování v EU"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_cs"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_cs"
 
 msgid "Law"
 msgstr "Právní předpisy"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_cs"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_cs"
 
 msgid "Funding, Tenders"
 msgstr "Financování, tendry, výběrová řízení"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_cs"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_cs"
 
 msgid "Research and innovation"
 msgstr "Výzkum a inovace"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_cs"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_cs"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energetika, změna klimatu, životní prostředí"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_cs"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_cs"
 
 msgid "Education"
 msgstr "Vzdělávání"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_cs"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_cs"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Pomoc, rozvojová spolupráce, základní práva"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_cs"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_cs"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Potraviny, zemědělství, rybolov"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_cs"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_cs"
 
 msgid "EU regional and urban development"
 msgstr "Regionální a městský rozvoj"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_cs"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_cs"
 
 msgid "Jobs at the European Commission"
 msgstr "Kariéra v Evropské komisi"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_cs"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_cs"
 
 msgid "Statistics"
 msgstr "Statistiky"
@@ -274,20 +274,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/cs"
 msgid "News"
 msgstr "Aktuality"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_cs"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_cs"
 
 msgid "Events"
 msgstr "Akce "
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_cs"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_cs"
 
 msgid "Publications"
 msgstr "Publikace"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_cs"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_cs"
 
 msgid "Contact the European Commission"
 msgstr "Kontakt na Evropskou komisi"
@@ -298,23 +298,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_cs#/se
 msgid "Follow the European Commission on social media"
 msgstr "Evropská komise na sociálních médiích"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_cs"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_cs"
 
 msgid "Resources for partners"
 msgstr "Zdroje a pokyny pro naše partnery"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_cs"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_cs"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_cs"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_cs"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_cs"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_cs"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_cs"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_cs"
 
 msgid "Social media"
 msgstr "Sociální média"
