--- a/translations/oe_corporate_blocks-fi.po
+++ b/translations/oe_corporate_blocks-fi.po
@@ -184,92 +184,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_fi"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_fi"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_fi"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_fi"
 
 msgid "European Commission website"
 msgstr "Euroopan komission verkkosivusto"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_fi"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_fi"
 
 msgid "Strategy"
 msgstr "EU:n strategia"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_fi"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_fi"
 
 msgid "About the European Commission"
 msgstr "Perustietoa Euroopan komissiosta"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_fi"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_fi"
 
 msgid "Business, Economy, Euro"
 msgstr "Yritystoiminta, talous, euro"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_fi"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_fi"
 
 msgid "Live, work, travel in the EU"
 msgstr "Asuminen, työnteko ja matkustaminen EU:ssa"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_fi"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_fi"
 
 msgid "Law"
 msgstr "Lainsäädäntö"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_fi"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_fi"
 
 msgid "Funding, Tenders"
 msgstr "Rahoitus, avustukset ja tarjouskilpailut"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_fi"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_fi"
 
 msgid "Research and innovation"
 msgstr "Tutkimus ja innovointi"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_fi"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_fi"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energia, ilmastonmuutos ja ympäristö"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_fi"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_fi"
 
 msgid "Education"
 msgstr "Koulutus"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_fi"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_fi"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Kansainvälinen apu, kehitysyhteistyö ja perusoikeudet"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_fi"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_fi"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Elintarvikkeet, maatalous, kalatalous"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_fi"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_fi"
 
 msgid "EU regional and urban development"
 msgstr "EU:n tuki alueille ja kaupungeille"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_fi"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_fi"
 
 msgid "Jobs at the European Commission"
 msgstr "Työpaikat EU:n toimielimissä"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_fi"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_fi"
 
 msgid "Statistics"
 msgstr "Tilastot"
@@ -280,20 +280,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/fi"
 msgid "News"
 msgstr "Uutiset"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_fi"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_fi"
 
 msgid "Events"
 msgstr "Tapahtumat"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_fi"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_fi"
 
 msgid "Publications"
 msgstr "Julkaisut"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_fi"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_fi"
 
 msgid "Contact the European Commission"
 msgstr "Yhteydenotot Euroopan komissioon"
@@ -304,23 +304,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_fi#/se
 msgid "Follow the European Commission on social media"
 msgstr "Seuraa Euroopan komissiota sosiaalisessa mediassa"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_fi"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_fi"
 
 msgid "Resources for partners"
 msgstr "Apuvälineitä yhteistyökumppaneille"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_fi"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_fi"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_fi"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_fi"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_fi"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_fi"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_fi"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_fi"
 
 msgid "Social media"
 msgstr "Sosiaalinen media"
