--- a/translations/oe_corporate_blocks-hu.po
+++ b/translations/oe_corporate_blocks-hu.po
@@ -185,92 +185,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_hu"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_hu"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_hu"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_hu"
 
 msgid "European Commission website"
 msgstr "Az Európai Bizottság honlapja"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_hu"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_hu"
 
 msgid "Strategy"
 msgstr "Stratégia"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_hu"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_hu"
 
 msgid "About the European Commission"
 msgstr "Az Európai Bizottságról"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_hu"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_hu"
 
 msgid "Business, Economy, Euro"
 msgstr "Vállalkozások, gazdaság, euró"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_hu"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_hu"
 
 msgid "Live, work, travel in the EU"
 msgstr "Élet, munka, utazás az EU-ban"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_hu"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_hu"
 
 msgid "Law"
 msgstr "Jogszabályok"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_hu"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_hu"
 
 msgid "Funding, Tenders"
 msgstr "Finanszírozási lehetőségek, felhívások"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_hu"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_hu"
 
 msgid "Research and innovation"
 msgstr "Kutatás és innováció"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_hu"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_hu"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energiaunió, éghajlat-politika, környezet"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_hu"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_hu"
 
 msgid "Education"
 msgstr "Oktatás"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_hu"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_hu"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Segítségnyújtás, fejlesztési együttműködés, alapvető jogok"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_hu"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_hu"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Élelmiszeripar, mezőgazdaság, halászat"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_hu"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_hu"
 
 msgid "EU regional and urban development"
 msgstr "Uniós regionális és várospolitika"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_hu"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_hu"
 
 msgid "Jobs at the European Commission"
 msgstr "Álláslehetőségek az Európai Bizottságnál"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_hu"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_hu"
 
 msgid "Statistics"
 msgstr "Statisztikák"
@@ -281,20 +281,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/hu"
 msgid "News"
 msgstr "Hírek"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_hu"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_hu"
 
 msgid "Events"
 msgstr "Események"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_hu"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_hu"
 
 msgid "Publications"
 msgstr "Kiadványok"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_hu"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_hu"
 
 msgid "Contact the European Commission"
 msgstr "Fel szeretné venni a kapcsolatot az Európai Bizottsággal?"
@@ -305,23 +305,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_hu#/se
 msgid "Follow the European Commission on social media"
 msgstr "Az Európai Bizottság a közösségi média felületein"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_hu"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_hu"
 
 msgid "Resources for partners"
 msgstr "Erőforrások, segédeszközök"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_hu"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_hu"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_hu"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_hu"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_hu"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_hu"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_hu"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_hu"
 
 msgid "European Economic and Social Committee (EESC)"
 msgstr "Európai Gazdasági és Szociális Bizottság (EGSZB)"
