--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -184,92 +184,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_ro"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_ro"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_ro"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_ro"
 
 msgid "European Commission website"
 msgstr "Site-ul Comisiei Europene"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_ro"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_ro"
 
 msgid "Strategy"
 msgstr "Strategie"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_ro"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_ro"
 
 msgid "About the European Commission"
 msgstr "Despre Comisia Europeană"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_ro"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_ro"
 
 msgid "Business, Economy, Euro"
 msgstr "Întreprinderi, economie, moneda euro"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_ro"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_ro"
 
 msgid "Live, work, travel in the EU"
 msgstr "Viața, munca și călătoriile în UE"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_ro"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_ro"
 
 msgid "Law"
 msgstr "Reglementare"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_ro"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_ro"
 
 msgid "Funding, Tenders"
 msgstr "Finanțare, licitații"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_ro"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_ro"
 
 msgid "Research and innovation"
 msgstr "Cercetare și inovare"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_ro"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_ro"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energie, schimbări climatice, mediu"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_ro"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_ro"
 
 msgid "Education"
 msgstr "Educație"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_ro"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_ro"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Ajutor extern, cooperare pentru dezvoltare, drepturi fundamentale"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_ro"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_ro"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Alimentație, agricultură, pescuit"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_ro"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_ro"
 
 msgid "EU regional and urban development"
 msgstr "Dezvoltare regională și urbană în UE"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_ro"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_ro"
 
 msgid "Jobs at the European Commission"
 msgstr "Posturi la Comisia Europeană"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_ro"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_ro"
 
 msgid "Statistics"
 msgstr "Statistici"
@@ -280,20 +280,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/ro"
 msgid "News"
 msgstr "Noutăți"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_ro"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_ro"
 
 msgid "Events"
 msgstr "Evenimente"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_ro"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_ro"
 
 msgid "Publications"
 msgstr "Publicații"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_ro"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_ro"
 
 msgid "Contact the European Commission"
 msgstr "Contactați Comisia Europeană"
@@ -304,23 +304,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_ro#/se
 msgid "Follow the European Commission on social media"
 msgstr "Urmăriți Comisia Europeană pe platformele de comunicare socială"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_ro"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_ro"
 
 msgid "Resources for partners"
 msgstr "Resurse pentru parteneri"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_ro"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_ro"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_ro"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_ro"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_ro"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_ro"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_ro"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_ro"
 
 msgid "Social media"
 msgstr "Rețele sociale"
