--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -181,92 +181,92 @@ msgstr "https://european-union.europa.eu/accessibility-statement_sv"
 msgid "https://commission.europa.eu/accessibility-statement_en"
 msgstr "https://commission.europa.eu/accessibility-statement_sv"
 
-msgid "https://ec.europa.eu/info/index_en"
-msgstr "https://ec.europa.eu/info/index_sv"
+msgid "https://commission.europa.eu/index_en"
+msgstr "https://commission.europa.eu/index_sv"
 
 msgid "European Commission website"
 msgstr "Europeiska kommissionens webbplats"
 
-msgid "https://ec.europa.eu/info/strategy_en"
-msgstr "https://ec.europa.eu/info/strategy_sv"
+msgid "https://commission.europa.eu/strategy_en"
+msgstr "https://commission.europa.eu/strategy_sv"
 
 msgid "Strategy"
 msgstr "Strategier"
 
-msgid "https://ec.europa.eu/info/about-european-commission_en"
-msgstr "https://ec.europa.eu/info/about-european-commission_sv"
+msgid "https://commission.europa.eu/about-european-commission_en"
+msgstr "https://commission.europa.eu/about-european-commission_sv"
 
 msgid "About the European Commission"
 msgstr "Om Europeiska kommissionen"
 
-msgid "https://ec.europa.eu/info/business-economy-euro_en"
-msgstr "https://ec.europa.eu/info/business-economy-euro_sv"
+msgid "https://commission.europa.eu/business-economy-euro_en"
+msgstr "https://commission.europa.eu/business-economy-euro_sv"
 
 msgid "Business, Economy, Euro"
 msgstr "Företag, ekonomi och euron"
 
-msgid "https://ec.europa.eu/info/live-work-travel-eu_en"
-msgstr "https://ec.europa.eu/info/live-work-travel-eu_sv"
+msgid "https://commission.europa.eu/live-work-travel-eu_en"
+msgstr "https://commission.europa.eu/live-work-travel-eu_sv"
 
 msgid "Live, work, travel in the EU"
 msgstr "Bo, jobba och resa i EU"
 
-msgid "https://ec.europa.eu/info/law_en"
-msgstr "https://ec.europa.eu/info/law_sv"
+msgid "https://commission.europa.eu/law_en"
+msgstr "https://commission.europa.eu/law_sv"
 
 msgid "Law"
 msgstr "Lagstiftning"
 
-msgid "https://ec.europa.eu/info/funding-tenders_en"
-msgstr "https://ec.europa.eu/info/funding-tenders_sv"
+msgid "https://commission.europa.eu/funding-tenders_en"
+msgstr "https://commission.europa.eu/funding-tenders_sv"
 
 msgid "Funding, Tenders"
 msgstr "Bidrag och upphandling"
 
-msgid "https://ec.europa.eu/info/research-and-innovation_en"
-msgstr "https://ec.europa.eu/info/research-and-innovation_sv"
+msgid "https://commission.europa.eu/research-and-innovation_en"
+msgstr "https://commission.europa.eu/research-and-innovation_sv"
 
 msgid "Research and innovation"
 msgstr "Forskning och innovation"
 
-msgid "https://ec.europa.eu/info/energy-climate-change-environment_en"
-msgstr "https://ec.europa.eu/info/energy-climate-change-environment_sv"
+msgid "https://commission.europa.eu/energy-climate-change-environment_en"
+msgstr "https://commission.europa.eu/energy-climate-change-environment_sv"
 
 msgid "Energy, Climate change, Environment"
 msgstr "Energi, klimat och miljö"
 
-msgid "https://ec.europa.eu/info/education_en"
-msgstr "https://ec.europa.eu/info/education_sv"
+msgid "https://commission.europa.eu/education_en"
+msgstr "https://commission.europa.eu/education_sv"
 
 msgid "Education"
 msgstr "Utbildning"
 
-msgid "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_en"
-msgstr "https://ec.europa.eu/info/aid-development-cooperation-fundamental-rights_sv"
+msgid "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
+msgstr "https://commission.europa.eu/aid-development-cooperation-fundamental-rights_sv"
 
 msgid "Aid, Development cooperation, Fundamental rights"
 msgstr "Bistånd, utvecklingssamarbete och grundläggande rättigheter"
 
-msgid "https://ec.europa.eu/info/food-farming-fisheries_en"
-msgstr "https://ec.europa.eu/info/food-farming-fisheries_sv"
+msgid "https://commission.europa.eu/food-farming-fisheries_en"
+msgstr "https://commission.europa.eu/food-farming-fisheries_sv"
 
 msgid "Food, Farming, Fisheries"
 msgstr "Livsmedel, jordbruk och fiske"
 
-msgid "https://ec.europa.eu/info/eu-regional-and-urban-development_en"
-msgstr "https://ec.europa.eu/info/eu-regional-and-urban-development_sv"
+msgid "https://commission.europa.eu/eu-regional-and-urban-development_en"
+msgstr "https://commission.europa.eu/eu-regional-and-urban-development_sv"
 
 msgid "EU regional and urban development"
 msgstr "EU-stöd till regioner, landsbygd och städer"
 
-msgid "https://ec.europa.eu/info/jobs-european-commission_en"
-msgstr "https://ec.europa.eu/info/jobs-european-commission_sv"
+msgid "https://commission.europa.eu/jobs-european-commission_en"
+msgstr "https://commission.europa.eu/jobs-european-commission_sv"
 
 msgid "Jobs at the European Commission"
 msgstr "Jobba hos EU-kommissionen"
 
-msgid "https://ec.europa.eu/info/statistics_en"
-msgstr "https://ec.europa.eu/info/statistics_sv"
+msgid "https://commission.europa.eu/statistics_en"
+msgstr "https://commission.europa.eu/statistics_sv"
 
 msgid "Statistics"
 msgstr "Statistik"
@@ -277,20 +277,20 @@ msgstr "https://ec.europa.eu/commission/presscorner/home/sv"
 msgid "News"
 msgstr "Nyheter"
 
-msgid "https://ec.europa.eu/info/events_en"
-msgstr "https://ec.europa.eu/info/events_sv"
+msgid "https://commission.europa.eu/events_en"
+msgstr "https://commission.europa.eu/events_sv"
 
 msgid "Events"
 msgstr "Evenemang"
 
-msgid "https://ec.europa.eu/info/publications_en"
-msgstr "https://ec.europa.eu/info/publications_sv"
+msgid "https://commission.europa.eu/publications_en"
+msgstr "https://commission.europa.eu/publications_sv"
 
 msgid "Publications"
 msgstr "Publikationer"
 
-msgid "https://ec.europa.eu/info/about-european-commission/contact_en"
-msgstr "https://ec.europa.eu/info/about-european-commission/contact_sv"
+msgid "https://commission.europa.eu/about-european-commission/contact_en"
+msgstr "https://commission.europa.eu/about-european-commission/contact_sv"
 
 msgid "Contact the European Commission"
 msgstr "Kontakta EU-kommissionen"
@@ -301,23 +301,23 @@ msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_sv#/se
 msgid "Follow the European Commission on social media"
 msgstr "Följ kommissionen på sociala medier"
 
-msgid "https://ec.europa.eu/info/resources-partners_en"
-msgstr "https://ec.europa.eu/info/resources-partners_sv"
+msgid "https://commission.europa.eu/resources-partners_en"
+msgstr "https://commission.europa.eu/resources-partners_sv"
 
 msgid "Resources for partners"
 msgstr "Resurser för partner"
 
-msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "https://ec.europa.eu/info/language-policy_sv"
+msgid "https://commission.europa.eu/language-policy_en"
+msgstr "https://commission.europa.eu/language-policy_sv"
 
-msgid "https://ec.europa.eu/info/cookies_en"
-msgstr "https://ec.europa.eu/info/cookies_sv"
+msgid "https://commission.europa.eu/cookies_en"
+msgstr "https://commission.europa.eu/cookies_sv"
 
-msgid "https://ec.europa.eu/info/privacy-policy_en"
-msgstr "https://ec.europa.eu/info/privacy-policy_sv"
+msgid "https://commission.europa.eu/privacy-policy_en"
+msgstr "https://commission.europa.eu/privacy-policy_sv"
 
-msgid "https://ec.europa.eu/info/legal-notice_en"
-msgstr "https://ec.europa.eu/info/legal-notice_sv"
+msgid "https://commission.europa.eu/legal-notice_en"
+msgstr "https://commission.europa.eu/legal-notice_sv"
 
 msgid "Social media"
 msgstr "Sociala medier"
